--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
+<header>TEST</header>
 
 <body id="body">
     <div id="container" style="font-size: 50px;"></div>
